--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -13,42 +12,45 @@
         android:id="@+id/textViewHello"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/teal_50"
+        android:contentDescription="Main greeting message"
+        android:fontFamily="sans-serif-medium"
+        android:padding="8dp"
         android:text="Hello World!"
+        android:textColor="@color/teal_700"
         android:textSize="28sp"
         android:textStyle="bold"
-        android:textColor="@color/teal_700"
-        android:fontFamily="sans-serif-medium"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/imageView1"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageView1"
         android:layout_width="180dp"
         android:layout_height="180dp"
-        android:src="@drawable/sample1"
         android:contentDescription="App logo"
         android:elevation="4dp"
-        app:layout_constraintTop_toBottomOf="@id/textViewHello"
+        android:src="@drawable/sample1"
         app:layout_constraintBottom_toTopOf="@id/textInputLayout"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/textViewHello" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayout"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
         android:hint="Enter your name"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         app:boxStrokeColor="@color/teal_700"
         app:hintTextColor="@color/teal_700"
-        app:layout_constraintTop_toBottomOf="@id/imageView1"
         app:layout_constraintBottom_toTopOf="@id/button1"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/imageView1">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/inputField1"
@@ -64,18 +66,18 @@
         android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:elevation="4dp"
+        android:paddingHorizontal="32dp"
+        android:paddingVertical="12dp"
         android:text="Say Hello"
         android:textColor="@android:color/white"
         android:textSize="16sp"
-        android:paddingHorizontal="32dp"
-        android:paddingVertical="12dp"
-        android:elevation="4dp"
-        app:cornerRadius="8dp"
         app:backgroundTint="@color/teal_700"
-        app:rippleColor="@color/teal_200"
-        app:layout_constraintTop_toBottomOf="@id/textInputLayout"
+        app:cornerRadius="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/textInputLayout"
+        app:rippleColor="@color/teal_200" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
