--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -13,43 +12,46 @@
         android:id="@+id/textViewWelcome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/green_50"
+        android:contentDescription="Welcome message for second activity"
+        android:fontFamily="sans-serif-medium"
+        android:padding="8dp"
         android:text="Welcome to Activity 2!"
+        android:textColor="@color/green_700"
         android:textSize="26sp"
         android:textStyle="italic"
-        android:textColor="@color/green_700"
-        android:fontFamily="sans-serif-medium"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/imageView2"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="180dp"
         android:layout_height="180dp"
-        android:src="@drawable/sample2"
         android:contentDescription="Activity 2 illustration"
         android:elevation="4dp"
-        app:layout_constraintTop_toBottomOf="@id/textViewWelcome"
+        android:src="@drawable/sample2"
         app:layout_constraintBottom_toTopOf="@id/textInputLayout2"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textViewWelcome"
         app:layout_constraintVertical_chainStyle="packed" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayout2"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
         android:hint="Type something"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         app:boxStrokeColor="@color/green_700"
         app:hintTextColor="@color/green_700"
-        app:layout_constraintTop_toBottomOf="@id/imageView2"
         app:layout_constraintBottom_toTopOf="@id/button2"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/imageView2">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/inputField2"
@@ -65,18 +67,18 @@
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:elevation="4dp"
+        android:paddingHorizontal="32dp"
+        android:paddingVertical="12dp"
         android:text="Show Toast"
         android:textColor="@android:color/white"
         android:textSize="16sp"
-        android:paddingHorizontal="32dp"
-        android:paddingVertical="12dp"
-        android:elevation="4dp"
-        app:cornerRadius="8dp"
         app:backgroundTint="@color/green_700"
-        app:rippleColor="@color/green_200"
-        app:layout_constraintTop_toBottomOf="@id/textInputLayout2"
+        app:cornerRadius="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/textInputLayout2"
+        app:rippleColor="@color/green_200" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
