--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="teal_700">#FF00796B</color>
     <color name="green_200">#A5D6A7</color>
     <color name="green_700">#388E3C</color>
+    <color name="teal_50">#E0F2F1</color>
+    <color name="green_50">#E8F5E9</color>
 </resources>
