--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="purple_200">#FFBB86FC</color>
+    <color name="purple_500">#FF6200EE</color>
+    <color name="purple_700">#FF3700B3</color>
+    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="teal_200">#FF80CBC4</color>
-    <color name="teal_700">#FF00796B</color>
-    <color name="green_200">#A5D6A7</color>
-    <color name="green_700">#388E3C</color>
-    <color name="teal_50">#E0F2F1</color>
-    <color name="green_50">#E8F5E9</color>
 </resources>
